# lines

./: .gitignore  Cargo.toml  LICENSE  README.md  counter.go  format.go  languages.go  languages_test.go  main.go
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
counter/: counter.go  counter_test.go  languages.go  languages_test.go
counter/test_files/: go_sample.go
src/: cli.rs  fs.rs  lang.rs  main.rs
test_files/: go_sample.go
