[package]
name = "lines-cli"
version = "0.3.4"
description = "Counts lines of code, fast."
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/lines"
categories = ["command-line-utilities"]
keywords = ["count", "lines", "lines-of-code"]
license = "MIT"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "lines"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
bytecount = { version = "0.6" }
clap = { version = "4.1", features = ["derive"] }
crossbeam = { version = "0.8" }
ignore = { version = "0.4" }
jemallocator = { version = "0.5" }
num_cpus = { version = "1.15" }
num-format = { version = "0.4" }
phf = { version = "0.11", features = ["macros"] }
rustc-hash = { version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tabled = { version = "0.12" }
