[package]
name = "lines-cli"
version = "0.3.10"
description = "Counts lines of code, fast."
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/lines"
categories = ["command-line-utilities"]
keywords = ["count", "lines", "lines-of-code"]
license = "MIT"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "lines"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
bytecount = { version = "0.6" }
clap = { version = "4.5", features = ["derive"] }
crossbeam = { version = "0.8" }
ignore = { version = "0.4" }
num-format = { version = "0.4" }
rustc-hash = { version = "1.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tabled = { version = "0.15" }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = { version = "0.5.4" }
