[package]
name = "lines-cli"
version = "0.3.16"
description = "Counts lines of code, fast."
authors = ["Ryan Fowler <ryan.fowler19@gmail.com>"]
repository = "https://github.com/ryanfowler/lines"
categories = ["command-line-utilities"]
keywords = ["count", "lines", "lines-of-code"]
license = "MIT"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "lines"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[dependencies]
bytecount = { version = "0.6.9" }
clap = { version = "4.5.48", features = ["derive"] }
crossbeam = { version = "0.8.4" }
ignore = { version = "0.4.23" }
mimalloc = { version = "0.1.48" }
num-format = { version = "0.4.4" }
regex = { version = "1.12.1" }
rustc-hash = { version = "2.1.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
tabled = { version = "0.20.0" }

